# datatribe-vectorizer

./: .gitignore  LICENSE  ORGANIZING_FILES.md  README.md  TEST_QUALITY.md  converter.py  create_test_image.py  pyproject.toml
docs/: ORGANIZING_FILES.md  QUALITY_GUIDE.md  ULTRA_QUALITY.md
