[tool.poetry]
package-mode = false

[project]
name = "transformto"
version = "0.1.0"
description = "Easy image converting from png to svg."
authors = [
    {name = "eveliinavesala",email = "eveliina.ves@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "vtracer (>=0.6.11,<0.7.0)",
    "rembg (>=2.0.72,<3.0.0)",
    "onnxruntime (>=1.15.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
